--- a/1.html
+++ b/1.html
@@ -16,7 +16,7 @@
     <button onclick="button1Pressed()">X</button>
     <button onclick="button2Pressed()">Y</button>
     <hr>
-    <p id="result">xxxx</p>
+    <p id="result">xxxxx</p>
 </body>
 
 </html>
