--- a/list.html
+++ b/list.html
@@ -7,68 +7,25 @@
     <script>
         function button1Pressed() {
 
+            var text = "";
+            text = text + "<ul>";
+            for (var i = 0; i < 3; i++) {
+                text = text + "<li>" + (i + 1) + "</li>";
+            }
+            text = text + "</ul>";
+            document.getElementById("x").innerHTML = text;
 
-
-            //0以上2未満の乱数を生成する            
-            var i = (Math.random() * 2);
-            i = Math.floor(i);
-
-            //結果を表示する
-            document.getElementById("result1").value = i;
-            i = (Math.random() * 2);
-            i = Math.floor(i);
-
-            document.getElementById("result2").value = i;
-
-            i = (Math.random() * 2);
-            i = Math.floor(i);
-            document.getElementById("result3").value = i;       //テキストフィールドはなぜかvalue
-
-            i = (Math.random() * 2);
-            i = Math.floor(i);   //innerHTMLは開きタブと閉じタブの間に何かいれるとき
-            document.getElementById("result4").value = i;
-
-
-            //var z = document.getElementById("a").value;
-            //z = Number(z);
-
-            //     if (z == n) {
-            //       result = "合っています"
-            // } else {
-            //   result = "間違っています"
-            // }
-        } function button2Pressed() {
-
-            var a = document.getElementById("result1").value;
-            var b = document.getElementById("result2").value;
-            var c = document.getElementById("result3").value;
-            var d = document.getElementById("result4").value;
-
-            a = Number(a);
-            b = Number(b);
-            c = Number(c);
-            d = Number(d);
-            var z = (a * 8) + (b * 4) + (c * 2) + d
-
-
-            document.getElementById("result").value = z;
         }
 
     </script>
 </head>
 
 <body>
-    <h1>2進数クイズ</h1>
-    <button onclick="button1Pressed()">生成</button>
-    <input id="a" type="text"><br>
-    <button onclick="button2Pressed();">答え合わせ</button>
-    <input id="result" type="text">
+    <h1>リスト練習</h1>
+    <button onclick="button1Pressed()">リスト生成</button>
+    <div id="x"></div>
 
-    <hr>
-    <input id="result1" type="text">
-    <input id="result2" type="text">
-    <input id="result3" type="text">
-    <input id="result4" type="text">
+
 
 </body>
 
