stopwatch2のファイル作成

--- a/stopwatch2.html
+++ b/stopwatch2.html
@@ -7,14 +7,31 @@
     <script>
         var time = 0;           //変数外に書く
         var timer;
+        var state = 1;//2?
 
         function button1Pressed() {
+            if (state === 1) {
+                start();
+                state = 2;
+
+            } else {
+                stop();
+                state = 1;
+
+            }
             timer = setInterval(tick, 1000); //1000ミリ秒＝1秒
         } function tick() {
             time = time + 1;
             document.getElementById("result").innerHTML = time;
         }
         function button2Pressed() {
+
+
+            if (state === 1) {
+                reset();
+            } else {
+                lap();
+            }
             clearInterval(timer);
             //function stop
 
