--- a/stopwatch2.html
+++ b/stopwatch2.html
@@ -7,7 +7,7 @@
     <script>
         var time = 0;           //変数外に書く
         var timer;
-        var state = 1;//2?
+        var state = 1;
 
         function button1Pressed() {
             if (state === 1) {
@@ -19,11 +19,22 @@
                 state = 1;
 
             }
+
+        }
+        function start() {
             timer = setInterval(tick, 1000); //1000ミリ秒＝1秒
-        } function tick() {
+        }
+
+        function tick() {
             time = time + 1;
             document.getElementById("result").innerHTML = time;
         }
+
+        function stop() {
+            clearInterval(timer);
+
+        }
+
         function button2Pressed() {
 
 
@@ -32,11 +43,14 @@
             } else {
                 lap();
             }
-            clearInterval(timer);
-            //function stop
+
+
+
+
 
         }
-        function button3Pressed() {
+
+        function reset() {
             time = 0;
             document.getElementById("result").innerHTML = time;
         }
@@ -51,7 +65,6 @@
     <p id="result">xxxx</p>
     <button onclick="button1Pressed()">A</button>
     <button onclick="button2Pressed()">B</button>
-    <button onclick="button3Pressed()">C</button>
 
 </body>
 
